Fix footer sizing
The footer was not taking up extra space that
was allowed, causing a blank space at the bottom
of the screen.

Added a percentage padding for top and bottom
that allowed the footer to spread farther
veritcaly allowing it to take up extra space

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,8 @@ footer {
     display: flex;
     justify-content: center;
     color: var(--white-color);
-    padding: 4vh 0 3vh 0;
+    /* padding: 4vh 0 3vh 0; */
+    padding: 10% 0;
     gap: 5vw;
     background-color: #1A200E;
     position: relative;
